--- a/.github/workflows/airflowpublish.yml
+++ b/.github/workflows/airflowpublish.yml
@@ -24,11 +24,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
-        pip install -r requirements.txt
+        pip install -r requirements.txt --cache-dir .pip_cache
     - name: Build and publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
         echo Need to create a setup file to execute necessary actions
+        python setup.py sdist bdist_wheel
         
