--- a/.github/workflows/airflowpublish.yml
+++ b/.github/workflows/airflowpublish.yml
@@ -27,9 +27,10 @@ jobs:
         pip install -r requirements.txt --cache-dir .pip_cache
     - name: Build and publish
       env:
-        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        TWINE_USERNAME: ${{ secrets.USER_NAME }}
+        TWINE_PASSWORD: ${{ secrets.USER_PASSWORD }}
       run: |
-        echo Need to create a setup file to execute necessary actions
+        echo creating a build
         python setup.py sdist bdist_wheel
+        twine upload dist/*
         
